--- a/ApiMongo/appsettings.json
+++ b/ApiMongo/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "MongoDB": "mongodb+srv://omnistack:Clojure%401993%23@cluster0.gbpur.mongodb.net/test?authSource=admin&replicaSet=atlas-mg1x2j-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
+    "MongoDB": "mongodb+srv://omnistack:<password>@cluster0.gbpur.mongodb.net/test?authSource=admin&replicaSet=atlas-mg1x2j-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
   },
   "Database": "Coronavirus",
   "AllowedHosts": "*"
